public_wallet_app/css/styles.css
/* ... */
.review-transaction-adress {
  font-family: monospace;
  margin-bottom: 0 0 2rem 2rem;
  background-color: var(--gray-background);
}
.review-transaction-container {
  padding: 0.2rem 0.5rem;
}
.review-transaction-total {
  border-top: 1px solid var(--navbar-text);
  padding-top: 0.5rem;
}
.review-trasaction-total-label {
  padding-top: 0.5rem;
}
.review-transaction-total-row {
  display: flex;
  justify-content: space-between;
  padding: 0.5rem 0 0.5rem;
}
.review-transaction-submit-row {
  display: flex;
  justify-content: flex-end;
}
/* BOX */
.box {
  padding: 1rem;
  margin: 1.5rem;
  background-color: #f8f9fa;
  border: 1px solid var(--border);
}
.box-info {
  border-color: var(--brand);
  background-color: #fcf7fd;
}
.overlay .box {
  box-shadow: 3px 8px 0.6rem rgba(0, 0, 0, 0.05);
  max-width: var(--width);
  width: 80%;
  position: relative;
  display: flex;
  flex-direction: column;
}

.overlay .box .message {
  overflow-y: auto;
}

.overlay .box .action {
  border-top: 1px solid var(--border);
  padding-top: 0.5rem;
}

@media screen and (max-width: 640px) {
  .overlay .box .centered-row {
    margin-top: 0.5rem;
  }
}

@media screen and (max-width: 370px) {
  .overlay .box .centered-row {
    margin-top: 1rem;
  }
}

/* ALERT */
@keyframes fade-out {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}
.alert {
  border: 1px solid var(--negative);
  background-color: var(--negative-transparent);
  color: var(--negative);
  margin: 0 0 0.5rem;
  padding: 0.5rem;
}
.alert small {
  font-weight: 400;
}
.alert.error {
  border-color: var(--negative);
  background-color: var(--negative-transparent);
  color: var(--negative);
}
.alert.success {
  border-color: var(--positive);
  background-color: var(--positive-transparent);
  color: var(--positive);
  animation: fade-out 2s;
  animation-delay: 2s;
  animation-fill-mode: forwards;
}
.alert.warning {
  border-color: var(--warning);
  background-color: var(--warning-transparent);
  color: var(--warning);
}
.validationMsg {
  color: var(--negative);
  margin: 0 0.8rem;
}
/* NAVIGATION */
.menu-btn{
  color: var(--navbar-text);
  text-decoration: none;
  margin-left: 1rem;
  transition: color var(--transition);
  cursor: pointer;
}
.menu-btn:hover {
  color: black;
}
.navbar {
  background-color: var(--navbar);
  border-bottom: 1px solid var(--border);
  z-index: 1;
}
.navbar-wrap {
  display: flex;
  align-items: center;
  max-width: var(--width);
  width: 100%;
  height: 3.5rem;
  margin: 0 auto;
}
.navbar .title {
  font-size: 1.25rem;
  padding: 0 1rem;
  font-weight: 500;
  display: flex;
  align-items: center;
  text-decoration: none;
  cursor: pointer;
}
.navbar .title sup {
  align-self: flex-start;
}
.navbar .title img {
  height: 2.5rem;
  margin-right: 0.25rem;
}
.navbar nav {
  display: flex;
  justify-content: space-between;
  flex-grow: 1;
  align-items: center;
}
.navbar .unauth {
  justify-content: flex-end;
}
.navbar input[type='checkbox'] {
  display: none;
}
.navbar nav a {
  color: var(--navbar-text);
  text-decoration: none;
  margin-left: 1rem;
  transition: color var(--transition);
  cursor: pointer;
}
.navbar nav a:hover,
.navbar nav a:active {
  color: black;
}
.navbar nav a.active {
  color: var(--brand);
}
.navbar a {
  color: var(--text-color);
}
.navcollapse-label {
  display: none;
}
.status {
  display: flex;
  align-items: center;
  color: var(--text-color);
  margin-left: 1.3rem;
}
.status > div {
  margin: 0 0.6rem 0 0.6rem;
}
.status .button {
  background-color: var(--navbar);
  color: var(--text-color);
  border: 0;
  cursor: pointer;
  transition: transform var(--transition), color var(--transition);
  margin: 0.3rem;
  padding: 2px;
  height: 2.5rem;
  border-radius: 0;
  display: inline-flex;
  flex-direction: column;
  align-items: center;
}
.status .button:hover {
  color: var(--brand);
}
.status-text {
  width: 14rem;
  text-align: right;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.9rem;
}
.status-balance {
  font-weight: bold;
  font-size: 1rem;
}
.active-wallet-id {
  color: var(--brand);
  cursor: default;
}
.status-icon-button-content {
  font-size: 0.8rem;
}
.status-icon-button-image {
  width: 0.9rem;
  height: 0.9rem;
}
.inline {
  display: inline;
}
@media screen and (max-width: 840px) {
  body {
    padding-top: 3.5rem;
  }

  .navcollapse-label {
    padding: 1rem 0;
    line-height: 1rem;
    margin-bottom: 0;
    margin-right: 1.5rem;
    display: flex;
    align-items: center;
  }

  .navbar {
    position: fixed;
    left: 0;
    right: 0;
    top: 0;
  }

  .navbar-wrap {
    justify-content: space-between;
  }

  .navbar nav {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    flex-grow: 1;
    position: fixed;
    right: 0;
    top: calc(3.5rem + 1px);
    bottom: 0;
    padding: 1rem 3rem;
    background-color: var(--navbar);
    border-left: 1px solid var(--border);
    transform: translateX(22rem);
    transition: transform var(--transition);
    z-index: 1;
  }

  .navbar nav a {
    margin-left: 0;
    margin-bottom: 1rem;
    display: block;
    text-align: center;
  }
  .navbar input[type='checkbox']:checked + nav {
    transform: translateX(0);
  }

  .status {
    margin: 0;
    flex-direction: column-reverse;
  }

  .status > div {
    margin: 0.6rem 0.6rem 0 0.6rem;
  }

  .status-text {
    white-space: normal;
    word-break: break-all;
    text-align: center;
  }
}
/* OVERLAY */
.overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(248, 249, 250, 0.85);
  z-index: 2;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  animation: fade-in 0.5s;
}
.overlay label {
  color: var(--navbar-text);
  cursor: pointer;
}
.overlay p {
  margin-top: 1rem;
  color: var(--navbar-text);
}

.overlay-close-layer {
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  cursor: pointer;
}
/* ... */

